service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: prod
spec:
  selector:
    app: myapp
    version: blue
  ports:
  - port: 80
    targetPort: 80
